set(LUCARIA_BUILD_COMPILERS ON)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/assimp ${CMAKE_CURRENT_BINARY_DIR}/external/assimp)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/cereal ${CMAKE_CURRENT_BINARY_DIR}/external/cereal)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/etcpak ${CMAKE_CURRENT_BINARY_DIR}/external/etcpak)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/glm ${CMAKE_CURRENT_BINARY_DIR}/external/glm)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/glfw ${CMAKE_CURRENT_BINARY_DIR}/external/glfw)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/imgui ${CMAKE_CURRENT_BINARY_DIR}/external/imgui)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/ogg ${CMAKE_CURRENT_BINARY_DIR}/external/ogg)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/ozz ${CMAKE_CURRENT_BINARY_DIR}/external/ozz)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/stb ${CMAKE_CURRENT_BINARY_DIR}/external/stb)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/vorbis ${CMAKE_CURRENT_BINARY_DIR}/external/vorbis)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/vorbistools ${CMAKE_CURRENT_BINARY_DIR}/external/vorbistools)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/woff ${CMAKE_CURRENT_BINARY_DIR}/external/woff)

file(GLOB_RECURSE lucaria_binc_source "*.cpp")
add_executable(lucaria_binc ${lucaria_binc_source})
target_include_directories(lucaria_binc PRIVATE "${LUCARIA_INCLUDE_DIR}")
target_include_directories(lucaria_binc PRIVATE "${CMAKE_CURRENT_LIST_DIR}")
set_target_properties(lucaria_binc PROPERTIES CXX_STANDARD 17)

target_link_libraries(lucaria_binc PRIVATE lucaria_external_assimp)
target_link_libraries(lucaria_binc PRIVATE lucaria_external_cereal)
target_link_libraries(lucaria_binc PRIVATE lucaria_external_etcpak)
target_link_libraries(lucaria_binc PRIVATE lucaria_external_glm)
target_link_libraries(lucaria_binc PRIVATE lucaria_external_ozz)
target_link_libraries(lucaria_binc PRIVATE lucaria_external_gltf2ozz)
target_link_libraries(lucaria_binc PRIVATE lucaria_external_oggenc)
target_link_libraries(lucaria_binc PRIVATE lucaria_external_stb)
target_link_libraries(lucaria_binc PRIVATE lucaria_external_woff2enc)

target_include_directories(lucaria_binc BEFORE PRIVATE "${lucaria_patched_imgui_dir}")
