add_subdirectory(${LUCARIA_EXTERNAL_DIR}/capstone ${CMAKE_CURRENT_BINARY_DIR}/external/capstone)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/glfw ${CMAKE_CURRENT_BINARY_DIR}/external/glfw)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/imgui ${CMAKE_CURRENT_BINARY_DIR}/external/imgui)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/zstd ${CMAKE_CURRENT_BINARY_DIR}/external/zstd)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/ppqsort ${CMAKE_CURRENT_BINARY_DIR}/external/ppqsort)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/nfd ${CMAKE_CURRENT_BINARY_DIR}/external/nfd)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/json ${CMAKE_CURRENT_BINARY_DIR}/external/json)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/md4c ${CMAKE_CURRENT_BINARY_DIR}/external/md4c)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/curl ${CMAKE_CURRENT_BINARY_DIR}/external/curl)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/usearch ${CMAKE_CURRENT_BINARY_DIR}/external/usearch)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/base64 ${CMAKE_CURRENT_BINARY_DIR}/external/base64)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/pugixml ${CMAKE_CURRENT_BINARY_DIR}/external/pugixml)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/tidy ${CMAKE_CURRENT_BINARY_DIR}/external/tidy)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/tracy ${CMAKE_CURRENT_BINARY_DIR}/external/tracy)

file(GLOB_RECURSE lucaria_tracyp_source "*.cpp")
add_executable(lucaria_tracyp ${lucaria_tracyp_source})
set_target_properties(lucaria_tracyp PROPERTIES CXX_STANDARD 17)

target_link_libraries(lucaria_tracyp PRIVATE lucaria_external_capstone)
target_link_libraries(lucaria_tracyp PRIVATE lucaria_external_ozz)
target_link_libraries(lucaria_tracyp PRIVATE lucaria_external_stb)
target_link_libraries(lucaria_tracyp PRIVATE lucaria_external_tracy)

target_include_directories(lucaria_tracyp BEFORE PRIVATE "${lucaria_patched_imgui_dir}")
